<resources>
    <string name="app_name">Peso Ideal</string>

    <string name="hello_world">Calculo do IMC</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_peso">Peso:</string>
    <string name="hint_peso">Informe o peso em Kg</string>
    <string name="lbl_altura">Altura</string>
    <string name="hint_altura">Informe altura em metros</string>
    <string name="hint_idade">Informe a idadde</string>
    <string name="lbl_idade">Idade</string>
    <string name="lbl_sexo">Sexo</string>
    <string name="title_activity_result_activity">Resultado do calculo</string>
</resources>
